Bug 145919 - LO73b1: Graphics test UI not fully localizable
Summary: LO73b1: Graphics test UI not fully localizable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Not-Localizable
  Show dependency treegraph
 
Reported: 2021-11-27 18:02 UTC by Martin Srebotnjak
Modified: 2022-01-12 09:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
How it looks after the proposed patch in qtz locale (123.68 KB, image/png)
2022-01-08 19:12 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2021-11-27 18:02:49 UTC
Description:
The display of results of the graphics test (via Tools > Options > LibreOffice > View, then clicking the button to start the test) contains the following unlocalizable strings (maybe some others, too):
"Graphics Backend used:", "Passed Tests :", "Quirky Tests :", "Failed Tests :", "Skipped Tests :", "(Click on any test to view its resultant bitmap image)"
with non-localizable button labels:
"PASSED", "QUIRKY", "SKIPPED", "FAILED".

Note also the spacing in front of colon ":", which is not OK for English, but might work for other languages (French?).

Steps to Reproduce:
1. Open the Options and start the graphics test.
2. View the test results.
3.

Actual Results:
In a fully localized Slovenian build some strings remain in English (the reported ones, but there might be additional ones, not shown on my result set).

Expected Results:
All localizable.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 918b62bea6cf82ce952c8d225dcabd4d08a2abf7
CPU threads: 8; OS: Mac OS X 10.16; UI render: Skia/Raster; VCL: osx
Locale: sl-SI (sl_SI.UTF-8); UI: sl-SI
Calc: threaded

and

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: ddc57169ac8d1de00403dbb09fef5221beaa0f3d
CPU threads: 4; OS: Mac OS X 10.16; UI render: Skia/Metal; VCL: osx
Locale: sl-SI (sl_SI.UTF-8); UI: sl-SI
Calc: threaded
Comment 1 Ming Hua 2021-11-27 18:15:02 UTC
I've noticed the same thing on 7.3/master daily build.  Setting to NEW.

This feature was implemented as a project of Google Summer of Code 2021.  There doesn't seem to be a tracking bug on Bugzilla, but one can refer to the author's final report blog post [1] for all the commits.

1. https://theproglevblog.blogspot.com/2021/08/google-summer-of-code-2021-project.html
Comment 2 Gabor Kelemen (Collabora) 2022-01-08 19:12:00 UTC
Created attachment 177402 [details]
How it looks after the proposed patch in qtz locale

Proposed patch: https://gerrit.libreoffice.org/c/core/+/128087
Comment 3 Commit Notification 2022-01-11 08:23:36 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf3840931454553ff25e488dc1ede2af65e0016b

tdf#145919 Localize strings in Graphics Test dialog

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2022-01-12 08:38:14 UTC
Fixed in 7.4, but too late for backporting to 7.3.
Comment 5 Adolfo Jayme Barrientos 2022-01-12 09:42:59 UTC
I think most of these messages can be switched to sentence case.