tdf#145919 Localize strings in Graphics Test dialog

but not in the saved log file

Change-Id: I65c580e7b8762b654f1812c96bc53841b882a960
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128087
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit cf3840931454553ff25e488dc1ede2af65e0016b)