include/vcl/test/GraphicsRenderTests.hxx
@@ -33,7 +33,7 @@ public:
     {
     }
     const OUString& getTestName() const { return m_aTestName; }
-    const OUString& getStatus() const { return m_aTestStatus; }
+    OUString getStatus(bool bLocalize = false);
     const Bitmap& getBitmap() const { return m_aResultantBitmap; }
 };
 
@@ -159,7 +159,7 @@ class VCL_PLUGIN_PUBLIC GraphicsRenderTests
 
 public:
     std::vector<VclTestResult>& getTestResults();
-    OUString getResultString();
+    OUString getResultString(bool bLocalize = false);
     void run(bool storeResultBitmap = false);
 
     GraphicsRenderTests()
